@@ -16,6 +16,7 @@ Version 1.1.1 to be released
 - Bug #932: CLocale::getWeekDayName() causes PHP error when requesting 'narrow' format data (Qiang)
 - Bug #947: CTabView does not target tab links correctly when extra elements are put in the header (Qiang)
 - Bug #957: CGettextPoFile should allow optional msgctxt (Qiang)
+- Bug #967: CFormInputElement doesn't respect element-id if set (Sam Dark)
 - Bug #988: COcSchema::quoteTableName() and quoteColumnName() should quote the names (Qiang)
 - Bug #995: The 'alias' option set in default scope was ignored when some find methods in AR (Qiang)
 - Bug #996: "yiic message" command generates incorrect message file name when used in a module context (Qiang)
@@ -33,6 +34,7 @@ Version 1.1.1 to be released
 - Enh #826: Added CMenu::itemTemplate property and template option for each menu item (Qiang)
 - Enh #857: Added $exit parameter to CController::forward() (Qiang)
 - Enh #872: Added CFlexWidget::allowFullScreen (Qiang)
+- Enh #888: Added CBaseUserIdentity::setPersistentStates (Sam Dark)
 - Enh #898: Added support to allow defining global yiic commands (Qiang)
 - Enh #912: Added CModel::onUnsafeAttribute() which will log a warning message when massively assigning unsafe attributes (Qiang)
 - Enh #916: Added visible option to buttons in CButtonColumn (Qiang)
@@ -49,9 +51,9 @@ Version 1.1.1 to be released
 - Enh: Added skipOnError property to built-in validators (Qiang)
 - Enh: Added CDbConnection::initSQLs (Qiang)
 - Enh: Added CHtml::refresh() (Qiang)
-- Enh #971: Added CDbCriteria::addNotInCondition() (Sam Dark)
 - Chg #841: Changed CUrlManager::parsePathInfo() to non-static (Qiang)
 - Chg #851: yiic tool no longer turns off E_NOTICE (Qiang)
+- Enh #971: Added CDbCriteria::addNotInCondition() (Sam Dark)
 - Chg #974: CComponent::evaluateExpression() no longer suppresses expression error (Qiang)
 - Chg #978: CActiveRecord::afterSave() will now be invoked only when the saving is successful (Qiang)
 - Chg: Upgraded jquery to version 1.4.2 (Qiang)
